# temp-soap-service

./: .gitignore  Pipfile  README.md  pyproject.toml
src/temp_soap_service/: app.py  service.py
tests/: test_service.py
